# chem_mlops

./: .gitignore  BUN_BACKEND_REFERENCE.md  CHAT_APP_PLAN.md  README.md  TODO.md  TYPESCRIPT_REFERENCE.md  initiate_data_collection.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
app/orchestration/: README.md  chembl_drug_chat_pipeline.py  data_transformation.py
app/scripts/flows/: __init__.py  collect_data.py  transform_data.py  transfrom_data.py
app/scripts/flows/eval/: benchmark_rag_vs_finetuned.py  eval_finetuned_model.py  eval_model.py  golden.jsonl
app/scripts/flows/finetuning/: convert_gemma3_gguf.py  export_to_ollama.py  finetuning.py
app/scripts/flows/initial_data_transformation/: collect_data.py  transform_data.py
app/scripts/flows/llm_finetuning_data/: build_drug_interaction_dataset.py  build_finetune_dataset.py  download_twosides.py
app/scripts/flows/vector_store/: README.md  ingest_to_lancedb.py  ingest_twosides_to_lancedb.py  query_lancedb.py
app/scripts/load_data/: load_data.py
app/tests/flows/: benchmark_rag_vs_finetuned_test.py  build_drug_interaction_dataset_test.py  build_finetune_dataset_test.py  collect_data_test.py  download_twosides_test.py  eval_finetuned_model_test.py  eval_model_test.py  export_to_ollama_test.py  finetuning_test.py  ingest_to_lancedb_test.py  ingest_twosides_to_lancedb_test.py  query_lancedb_test.py  transform_data_test.py
app/tests/load_data/: load_data_test.py
deployments/: chembl_pipeline_deployments.yaml  workspace.yaml
notebooks/: data_exploration.ipynb  data_exploration_2.ipynb  data_exploration_3.ipynb
web/: .gitignore  README.md  package.json  server.ts
web/public/: index.html  style.css
web/src/: app.ts  frontend-helpers.ts  frontend.ts  rag.ts
web/test/: app.test.ts  chat.test.ts  frontend.test.ts  model.test.ts  rag.test.ts
