[project]
name = "chem-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "httpx>=0.28.1",
    "jupyterlab>=4.4.9",
    "mlx-lm>=0.28.3",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "prefect>=3.4.20",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "python-toon>=0.1.3",
    "ray>=2.49.2",
    "seaborn>=0.13.2",
    "signalpilot-ai>=0.2.2",
    "tdqm>=0.0.1",
    "transformers>=4.57.1",
]
[tool.setuptools]
packages = ["app"]
