[project]
name = "chem-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "mlx-lm>=0.28.3",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "prefect>=3.4.20",
    "pyarrow>=21.0.0",
    "python-toon>=0.1.3",
    "ray>=2.49.2",
    "sentencepiece>=0.2.1",
    "signalpilot-ai>=0.2.2",
    "tqdm>=4.0.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
