[project]
name = "chem-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "gguf>=0.18.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "mlx-lm>=0.28.3",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "pyarrow>=21.0.0",
    "python-toon>=0.1.3",
    "ray>=2.49.2",
    "sentencepiece>=0.2.1",
    "signalpilot-ai>=0.2.2",
    "tqdm>=4.0.0",
    "transformers>=4.57.1",
    "lancedb>=0.30.2",
    "rdkit>=2026.3.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "pytest>=8.4.2",
    "ruff>=0.15.9",
    "seaborn>=0.13.2",
    "ty>=0.0.28",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
